--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-status-bar-height": "^2.4.0",
     "react-native-vector-icons": "^6.6.0",
-    "realm": "^3.6.4",
+    "realm": "^4.0.0-beta.0",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
