--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-status-bar-height": "^2.4.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-redux": "^7.2.0",
     "realm": "^4.0.0-beta.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
